Added GPLv3 license to files. Docum,ented public interface. Added About. Added context menu. Added ability to restore defaults.

--- a/MorseTrainer/MorseTrainer.csproj
+++ b/MorseTrainer/MorseTrainer.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
     <Compile Include="Analyzer.cs" />
     <Compile Include="CharGenerator.cs" />
     <Compile Include="Config.cs" />
@@ -64,9 +70,11 @@
     <Compile Include="Runner.cs" />
     <Compile Include="SoundPlayerAsync.cs" />
     <Compile Include="ToneGenerator.cs" />
-    <Compile Include="WaveBuilder.cs" />
     <Compile Include="WaveStream.cs" />
     <Compile Include="WordToToneBuilder.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="license.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
