--- a/MorseTrainer/MorseTrainer.csproj
+++ b/MorseTrainer/MorseTrainer.csproj
@@ -67,6 +67,12 @@
     <Compile Include="MorseCompareResults.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProsignKeyAssigner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProsignKeyAssigner.Designer.cs">
+      <DependentUpon>ProsignKeyAssigner.cs</DependentUpon>
+    </Compile>
     <Compile Include="Runner.cs" />
     <Compile Include="SoundPlayerAsync.cs" />
     <Compile Include="ToneGenerator.cs" />
@@ -87,6 +93,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ProsignKeyAssigner.resx">
+      <DependentUpon>ProsignKeyAssigner.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
